noch paar änderungen

--- a/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
+++ b/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
@@ -10,13 +10,11 @@ Trotzdem gibt es einige Techniken den generierten Klang natürlicher wirken zu l
 Bei der Synthese eines Tones mittels FM-Synthese müssen zunächst die Parameter der FM-Synthese Formel festgelegt werden. Hierzu kann das Frequenzspektrum und das Spektrogramm des nachzubildenden Tones verwendet werden. Eine ausführliche Erklärung der einzelnen Parameter ist zu finden in Kapitel \ref{einfacheFM} - \nameref{einfacheFM}. 
 
 Mit dem Offensichtlichstem kann gestartet werden, der Grundfrequenz. Sie ist die niedrigste ausgeprägte Frequenz des Spektrums und legt die Tonhöhe fest \cite[S. 53]{barkowsky}. Sie kann als Trägerfrequenz $f_c$ verwendet werden. Der Abstand der einzelnen Frequenzen zueinander ist der zweite Anhaltspunkt. Dieser Abstand findet als Modulationsfrequenz $f_m$ Verwendung. Für harmonische Töne ist ein ganzzahliges Vielfaches der Grundfrequenz als Modulationsfrequenz nötig \cite[S. 528]{chowningPaper}. Der Modulationsindex $I$ kann mithilfe der Bessel Funktionen gefunden werden - siehe hierzu \ref{bulli:besselModIndexZusammenahang} - \nameref{bulli:besselModIndexZusammenahang}. Alternativ kann eine grobe Schätzung vorgenommen werden, hierzu ist die folgende Faustformel nützlich:
-
 \begin{equation}
 \label{eq:faustformel}
 I + 1 = \text{Anzahl der Seitenfrequenzen mit signifikanter Ausprägung}
 \end{equation}
-
-Die Formel in \ref{eq:faustformel} kann mit Hilfe der Formel der Bandbreite aus \ref{eq:fmBandwidth} hergeleitet werden \cite[S. 221]{lathi}. Sollte mittels der normalen FM-Synthese kein zufriedenstellendes Ergebnis erzielt werden können, kann mit der komplexen FM-Synthese experimentiert werden. 
+Die Formel aus \ref{eq:faustformel} kann mit Hilfe der Formel der Bandbreite aus \ref{eq:fmBandwidth} hergeleitet werden \cite[S. 221]{lathi}. Sollte mittels normaler FM-Synthese kein zufriedenstellendes Ergebnis erzielt werden können, kann mit der komplexen FM-Synthese experimentiert werden. 
 
 Bei der komplexen FM-Synthese finden mehrere Träger oder mehrere Modulatoren Verwendung. Diese können in Reihe oder parallel geschaltet werden. Außerdem kann auch die so genannte Feedback Frequenzmodulation genutzt werden, welche das Signal mit dem jeweils voran gegangenem Sample moduliert \cite[S. 399 f.]{hornerPaper}. Feedback-FM-Synthese kann außerdem eingesetzt werden um Rauschen zu erzeugen. Sie kann aber auch ein sehr komplexes Spektrum mit besonders vielen Seitenfrequenzen erzeugen. Die komplexe FM-Synthese findet Einsatz, wenn mit der normalen FM-Synthese nicht ausreichend komplexe Spektren erzeugt werden können. Dies kann zum Beispiel der Fall sein, wenn mehrere exponentiell fallende Seitenfrequenzen erzeugt werden sollen. Wenn bei einfacher FM-Synthese der Modulationsindex erhöht wird um mehr Seitenfrequenzen zu erzeugen, verändert sich die Stärke der Grundfrequenz, definiert durch die Bessel Funktionen - nachzulesen im Kapitel \ref{bulli:besselModIndexZusammenahang} - \nameref{bulli:besselModIndexZusammenahang}. Um dies zu vermeiden muss auf die komplexe FM-Synthese zurückgegriffen werden, siehe \ref{PrinzipKomplexFM} - \nameref{PrinzipKomplexFM}
 
@@ -29,7 +27,7 @@ Eines der wichtigsten Grundbestandteile eines jeden Instrumententones ist die so
 \label{fig:adsrDefault}
 \end{figure}
 
-Da allerdings bei vielen Instrumenten die Lautstärke in den einzelnen Phasen der ADSR-Hüllkurve nicht gleichmäßig steigt oder sinkt, ist es nötig beliebig komplexe Kurven abbilden zu können. Bei vielen Instrumenten steigt beispielsweise die Lautstärke in der Attack Phase exponentiell an und fällt in der Decay und Release Phase auch wieder exponentiell ab. Manche Synthesizer bieten zusätzlich auch noch eine Hold Phase vor der Attack Phase, für Instrumente, die einige Zeit benötigen, bis sie nach dem Anschlagen des Tones in die Attack Phase eintreten. In Abbildung \ref{fig:adsrTypical} wurden weitere für Instrumenten typische Hüllkurven dargestellt um zu verdeutlichen, dass die ADSR-Hüllkurve bei Instrumenten beliebig schlichte sowie komplexe Formen annehmen kann.
+Da allerdings bei vielen Instrumenten die Lautstärke in den einzelnen Phasen der ADSR-Hüllkurve nicht gleichmäßig steigt oder sinkt, ist es nötig beliebig komplexe Kurven abbilden zu können. Bei vielen Instrumenten steigt beispielsweise die Lautstärke in der Attack Phase exponentiell an und fällt in der Decay und Release Phase auch wieder exponentiell ab. Manche Synthesizer bieten zusätzlich auch noch eine Hold Phase vor der Attack Phase, für Instrumente, die einige Zeit benötigen, bis sie nach dem Anschlagen des Tones in die Attack Phase eintreten. In Abbildung \ref{fig:adsrTypical} wurden weitere für Instrumenten typische Hüllkurven dargestellt um zu verdeutlichen, dass die ADSR-Hüllkurve beliebig schlichte sowie komplexe Formen annehmen kann.
 
 \begin{figure} [ht]
 \centering
@@ -40,9 +38,9 @@ Da allerdings bei vielen Instrumenten die Lautstärke in den einzelnen Phasen de
 
 Auch wenn das Hinzufügen einer ADSR-Hüllkurve den Klang des synthetisierten Tones schon natürlicher wirken lässt, hört sich der erzeugte Ton noch nicht wie ein echtes Instrument an. Eine weitere Möglichkeit ihn zu verbessern, stellt die Variierung des Modulationsindex über die Zeit oder die Amplitude dar. Somit kann die Anzahl der Seitenfrequenzen verändert werden, was zu einem lebendigeren Klang führt. \cite[S. 532]{chowningPaper}
 
-Um den Klang des Tones noch weiter zu verbessern stellen Filter ein gutes Hilfsmittel dar. Filter können genutzt werden um das von der FM Synthese erzeugte Signal zu manipulieren. Dabei werden ungewollte Frequenzen gedämpft bzw. komplett herausgefiltert oder gewollte Frequenzen verstärkt. Typische Vertreter von Filtern sind Hochpassfilter, Tiefpassfilter, Bandpass und Bandsperre. \cite[S. 100-104]{stotz}
+Um den Klang des Tones noch weiter zu verbessern stellen Filter ein gutes Hilfsmittel dar. Filter können genutzt werden um das von der FM-Synthese erzeugte Signal zu manipulieren. Dabei werden ungewollte Frequenzen gedämpft bzw. komplett herausgefiltert oder gewollte Frequenzen verstärkt. Typische Vertreter von Filtern sind Hochpassfilter, Tiefpassfilter, Bandpass und Bandsperre. \cite[S. 100-104]{stotz}
 
-Das bisher erzeugte Signal ist noch ein reines Signal, welches so in der Natur nicht vorkommen kann. Bei Luftverwirbelungen und Unebenheiten des Instrumentes tritt Rauschen auf. Dieses Rauschen trägt zum typischen Klangbild eines Instrumentes bei und muss auch nachgebildet werden. Ein Rauschen kann mittels Feedback-FM-Synthese erzeugt werden, dafür muss der Modulationsindex sehr hoch angesetzt werden. Das von der Feedback-FM-Synthese erzeugte Signal gleicht einem weißen Rauschen. Anschließend kann dieses Rauschen mittels Multibandpassfilter um die jeweiligen ausgeprägten Frequenzen gefiltert werden. Würde das Rauschen nicht gefiltert, kann neben dem Ton, das Rauschen als solches wahrgenommen werden. \cite[S. 152]{barkowsky}
+Das bisher erzeugte Signal ist noch ein reines Signal, welches so in der Natur nicht vorkommen kann. Bei Luftverwirbelungen und Unebenheiten des Instrumentes tritt Rauschen auf. Dieses Rauschen trägt zum typischen Klangbild eines Instrumentes bei und muss auch nachgebildet werden. Ein Rauschen kann mittels Feedback-FM-Synthese erzeugt werden, dafür muss der Modulationsindex sehr hoch angesetzt werden. Das von der Feedback-FM-Synthese erzeugte Signal gleicht hierbei einem weißen Rauschen. Anschließend kann dieses Rauschen mittels Multibandpassfilter um die jeweiligen ausgeprägten Frequenzen gefiltert werden. Würde das Rauschen nicht gefiltert, kann neben dem Ton, das Rauschen als solches wahrgenommen werden. \cite[S. 152]{barkowsky}
 
 Um den Klang des synthetisierten Tones noch natürlicher zu gestalten, könnte dem Ton zusätzlich ein Hall-Effekt hinzugefügt werden. Hall entsteht bei der diffusen Reflexion des Schalls an den Wänden eines Raumes, welche zu einer großen Anzahl an Echos führen. \cite[S. 108]{stotz}
 
@@ -50,7 +48,7 @@ Um den Klang des synthetisierten Tones noch natürlicher zu gestalten, könnte d
 \FloatBarrier
 \subsubsection{Nachbildung des Klangbildes eines Querflötentones mittels FM-Synthese}
 
-Im Laufe dieses Kapitels soll ein Ton einer Querflöte mittels FM-Synthese erzeugt und mit den oben beschriebenen Techniken verfeinert werden. Das Instrument Querflöte wurde ausgewählt, da es sehr harmonische Spektren erzeugt. Auf das nutzen eines Instrumentes mit einem inharmonischen Spektrum wurde vorsätzlich verzichtet, da die FM-Synthese mit harmonischen Spektren kontrollierbarer ist. Alle Beispiele sind in Matlab erstellt und können mit den beiliegenden Source-Code nachgestellt werden. In Abbildung \ref{fig:plotFluteOrig} sind Spektrogramm, Waveform und Spektrum des originalen Querflötentones abgebildet. Mit den Informationen aus den vorliegenden Grafiken wird versucht, dieses spezifische Klangbild nachzubilden.
+Im Laufe dieses Kapitels soll ein Ton einer Querflöte mittels FM-Synthese erzeugt und mit den oben beschriebenen Techniken verfeinert werden. Das Instrument Querflöte wurde ausgewählt, da es sehr harmonische Spektren erzeugt. Auf das nutzen eines Instrumentes mit einem disharmonischen Spektrum wurde vorsätzlich verzichtet, da die FM-Synthese mit harmonischen Spektren kontrollierbarer ist. Alle Beispiele sind in MATLAB erstellt und können mit den beiliegenden Source-Code nachgestellt werden. In Abbildung \ref{fig:plotFluteOrig} sind Spektrogramm, Waveform und Spektrum des originalen Querflötentones abgebildet. Mit den Informationen aus den vorliegenden Grafiken wird versucht, dieses spezifische Klangbild nachzubilden.
 
 \begin{figure} [h!t!b!]
 \centering
@@ -126,7 +124,7 @@ Trotz des verstärkten Rauschens zu Beginn des Tones, fehlt noch das stark hörb
 \label{fig:plotFMSyntheseComplete}
 \end{figure}
 
-Der in diesem Kapitel synthetisierte Ton nähert sich dem originalen Flötenton stark an. Sowohl die Tonhöhe wie auch das Klangbild konnten sehr gut nachgebildet werden. Durch das genutzte Vibrato, dem variablem Modulationsindex und der variablen Trägerfrequenz wirkt der erzeugte Klang lebendig. Einzig das scharfe Anblasgeräusch unterscheidet sich noch etwas von dem des originalen Tones. Wäre man allerdings nicht in der Lage die beiden Töne zu vergleichen könnte der synthetisierte Ton durchaus als ein echtes Instrument erkannt werden. Dieses Ergebnis zeigt, dass es sehr wohl möglich ist, mit der FM-Synthese einen natürlich wirkenden Instrumententon zu erzeugen. Allerdings ist dies mit erheblichem Aufwand verbunden.
+Der in diesem Kapitel synthetisierte Ton nähert sich dem originalen Flötenton stark an. Sowohl die Tonhöhe wie auch das Klangbild konnten sehr gut nachgebildet werden. Durch das genutzte Vibrato, dem variablem Modulationsindex und der variablen Trägerfrequenz wirkt der erzeugte Klang lebendig. Einzig das scharfe Anblasgeräusch unterscheidet sich noch etwas von dem des originalen Tones. Wäre man allerdings nicht in der Lage die beiden Töne zu vergleichen könnte der synthetisierte Ton durchaus als ein echtes Instrument erkannt werden. Dieses Ergebnis zeigt, dass es sehr wohl möglich ist, mit der FM-Synthese einen natürlich wirkenden Instrumententon zu erzeugen, allerdings ist dies mit erheblichem Aufwand verbunden.
 
 
 \FloatBarrier
@@ -134,7 +132,7 @@ Der in diesem Kapitel synthetisierte Ton nähert sich dem originalen Flötenton 
 
 Zu Beginn dieser Arbeit wurde zum besseren Verständnis der FM-Synthese ein kleiner Software Synthesizer in C++ mit der Hilfe des JUCE Frameworks implementiert. Das JUCE Framework wurde hierfür ausgewählt, da es gerade für ein Audioprogramm gut geeignet ist. Es bietet bereits Funktionen zur Ausgabe eines Audio Signals und Möglichkeiten zur Erstellung einer Benutzeroberfläche. Zudem ist es Cross Plattform fähig.
 
-Zunächst wurde eine einfache FM-Synthesizer Klasse geschrieben und diese an das Audio Ausgabesystem des JUCE Frameworks angebunden. Dabei ruft die Soundkarte eine Methode des Programms auf und erwartet, dass der übergebene Puffer mit Audiodaten gefüllt wird. Das Programm füllt den gegebenen Puffer mit Daten die mit der FM-Synthesizer Klasse generiert wurden. Später wurde das Programm dann noch um die visuelle Darstellung des erzeugten Audiosignals erweitert. Außerdem ist es möglich dem FM-Synthesizer einen Hüllkurvengenerator zu übergeben, welcher bei der Erzeugung des Audiosignals den Amplitudenwert für die einzelnen Samples bereitstellt. Die Amplitudenwerte werden ebenfalls visuell dargestellt.
+Zunächst wurde eine einfache FM-Synthesizer Klasse geschrieben und diese an das Audio Ausgabesystem des JUCE Frameworks angebunden. Dabei ruft die Soundkarte eine Methode des Programms auf und erwartet, dass der übergebene Puffer mit Audiodaten gefüllt wird. Das Programm füllt den gegebenen Puffer mit Daten, die mit der FM-Synthesizer Klasse generiert wurden. Später wurde das Programm dann noch um die visuelle Darstellung des erzeugten Audiosignals erweitert. Außerdem ist es möglich dem FM-Synthesizer einen Hüllkurvengenerator zu übergeben, welcher bei der Erzeugung des Audiosignals den Amplitudenwert für die einzelnen Samples bereitstellt. Die Amplitudenwerte werden ebenfalls visuell dargestellt.
 
 Da gerade die Änderung der Parameter und das jeweils resultierende Klangbild zum Verständnis hilfreich sind, wurden Möglichkeiten in das Programm eingebaut um sowohl den Modulationsindex als auch die Modulationsfrequenz sowie die Oktave zu ändern. Das Ändern der Parameter ist mittels einfachem Tastendruck möglich. Zusätzlich wurde das Programm so angepasst, dass es mittels Tastendruck ermöglicht wird verschiedene Töne zu spielen. Die Tasten "'C"', "'D"', "'E"', "'F"', "'G"', "'A"' und "'B"' entsprechen dabei jeweils ihrem tonalem Äquivalent. Beim Drücken der Taste startet die Hüllkurve in die Attack Phase, geht dann über in die Decay und schließlich in die Sustain Phase. Wird die Taste losgelassen startet die Release Phase und der Ton klingt ab. Mit den Tasten "'1"' und "'2"' kann der Modulationsindex inkrementiert sowie dekrementiert werden. Um die Modulationsfrequenz zu ändern können die Pfeil hoch und Pfeil runter Tasten genutzt werden. Die Octave lässt sich mit den Tasten "'+"' und "'-"' verändern.
 
